# xtsrcmaps

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.zig  development_notes.txt  gtsrcmaps.par
.nvim/: nvim-dap.lua
analysis/: 3C279_binned_ccube.fits  3C279_binned_output_point.xml  3C279_binned_srcmaps.fits  3C279_input_model_point.xml  3C279_region_filtered_gti_cmap.fits  3C279_unbin_expmap.fits  aeff_P8R3_SOURCE_V2_FB.fits  canonical_srcmap.fits  gtsrcmaps.par  psf_P8R3_SOURCE_V2_FB.fits  sep_off.py  single_point.xml
cmake/: homebrew-llvm-toolchain.cmake
docs/: Doxyfile
support/: CMakeLists.txt  reorder_tensor.cpp
tests/: CMakeLists.txt  fermi_tests.hxx  test_exposure.cxx  test_fitsfuncs.cxx  test_healpix.cxx  test_irf.cxx  test_irf.psf.cpp  test_king.cxx  test_psf.cxx  test_sky_geom.cxx
tests/fits/: aeff_expected.hxx  ccube_energies_expected.hxx  exposure_expected.hxx  psf_expected.hxx  separations_expected.hxx
tests/model_map/: test.mm.psf_value.single.cpp  test_pixel_convol_generic.cpp  test_pixel_offsets.cxx  test_riemann_slow.cxx
tests/tensor/: test_broadcast_iterator.cpp  test_read_tensor.cpp  test_tensor.arithmetic.cpp  test_tensor.broadcast.cpp  test_tensor.constructors.cpp  test_tensor.iterators.cpp  test_tensor.reshape.cpp  test_tensor.subscript.cpp  test_tensor.utility.cpp  test_write_tensor.cpp
xtsrcmaps/: CMakeLists.txt  bilerp.cxx  bilerp.hxx  config.hxx  expcube.hxx  exposure.cxx  exposure.hxx  fitsfuncs.cxx  fitsfuncs.hxx  fmt_source.hxx  gauss_legendre.hxx  genz_malik.cxx  genz_malik.hxx  healpix.cxx  healpix.hxx  interp.cxx  interp.hxx  irf.cxx  irf.hxx  irf_types.hxx  king.cxx  king.hxx  main.cxx  misc.hxx  model_map.cxx  model_map.hxx  parse_src_mdl.cxx  parse_src_mdl.hxx  prepare_irf_data.cxx  prepare_psf_data.cxx  psf.cxx  psf.hxx  psf3_base.cxx  psf_bilerp.cxx  psf_v1.cxx  psf_v2.cxx  sky_geom.cxx  sky_geom.hxx  source.hxx  source_map.cxx  (+9 more)
xtsrcmaps/cli/: CMakeLists.txt  cli.cxx  cli.hxx
xtsrcmaps/config/: CMakeLists.txt  config.cxx  config.hxx  parse_src_mdl.cxx  parse_src_mdl.hxx
xtsrcmaps/contour/: contour.cxx
xtsrcmaps/exposure/: CMakeLists.txt  exposure.contract.cpp  exposure.cxx  exposure.hxx
xtsrcmaps/fits/: CMakeLists.txt  fits.ccube_energies.cxx  fits.ccube_pixels.cxx  fits.cxx  fits.hxx  fits.read_allsky_cropped.cpp  fits.read_energies.cxx  fits.read_expcube.cxx  fits.read_image_meta.cxx  fits.read_irf_pars.cxx  fits.safe_open.cpp  fits.write_src_model.cxx
xtsrcmaps/healpix/: CMakeLists.txt  healpix.cxx  healpix.hxx
xtsrcmaps/irf/: CMakeLists.txt  _irf_private.hpp  irf.aeff_value.cxx  irf.collect_irf_data.cpp  irf.cxx  irf.hxx  irf.normalize_rpsf.cpp  irf.prepare_aeff_data.cpp  irf.prepare_effic.cpp  irf.prepare_grid.cpp  irf.prepare_psf_data.cpp  irf.prepare_scale.cpp  irf_types.hxx
xtsrcmaps/math/: CMakeLists.txt  bilerp.cxx  bilerp.hxx  fast_deep_lut_lerp.neon.cxx  gauss_legendre.hxx  genz_malik.cxx  genz_malik.hxx  solid_angle.hpp  tensor_ops.cxx  tensor_ops.hxx  tensor_types.hxx  trilerp.hpp
xtsrcmaps/math/convolve/fft/: fft.apple_convolve3d.cpp  fft.fftw_convolve_CHW.cpp
xtsrcmaps/misc/: fmt_source.hxx  misc.hxx  simdwidth.hpp
xtsrcmaps/model_map/: CMakeLists.txt  grid_operations.cxx  grid_operations.hxx  model_map.compute_src_maps.cxx  model_map.cxx  model_map.diffuse_src_model_map_wcs.cxx  model_map.get_init_points.cxx  model_map.hxx  model_map.integral.cxx  model_map.map_correction_factor.cxx  model_map.map_integral.cxx  model_map.pixel_mean_psf_genz.cxx  model_map.point_src_model_map_wcs.cxx  model_map.psf_boundary_radius.cxx  model_map.psf_fast_lut.cxx  model_map.riemann.cxx  model_map.scale_map_by_correction_factor.cxx  model_map.scale_map_by_exposure.cxx  model_map.scale_map_by_solid_angle.cxx  model_map_1d.cxx
xtsrcmaps/model_map/mm_cubature/: convolve_pixel_psf.hpp  convolve_pixel_psf_logsep.hpp  convolve_pixel_psf_searchsep.hpp  cubature.arpist.cxx  cubature.hpp  cubature.implementation.cxx  points_weights.hpp  weights.arpist.4.cpp  weights.naive.4096.cpp
xtsrcmaps/model_map/mm_cubature/convolve_pixel/: apple_psf_lut.hpp
xtsrcmaps/model_map/mm_fft/: fft.convolve_map_psf.cpp  fft.hpp
xtsrcmaps/observation/: CMakeLists.txt  obs_types.hxx  observation.cxx  observation.hxx
xtsrcmaps/psf/: CMakeLists.txt  psf.bilerp.cxx  psf.compute_psf_data.cxx  psf.corrected_exposure_psf.cxx  psf.cxx  psf.fast_separation_lower_index.cxx  psf.hxx  psf.king.cxx  psf.make_kernel.cpp  psf.mean_psf.cxx  psf.normalize.cxx  psf.partial_total_integral.cxx  psf.peak_psf.cxx  psf.psf_lookup_table_and_partial_integrals.cxx
xtsrcmaps/scripts/: gen_model_map.cxx
xtsrcmaps/sky_geom/: CMakeLists.txt  sky_geom.cxx  sky_geom.hxx
xtsrcmaps/skyimage/: skyimage.hpp
xtsrcmaps/source/: CMakeLists.txt  parse_src_mdl.hxx  source.collect_source_model.cpp  source.cxx  source.hxx  source.parse_src_mdl.cxx
xtsrcmaps/tensor/: _tensor_details.hpp  broadcast_iterator.hpp  read_file_tensor.hpp  reorder_tensor.hpp  tensor.hpp  tensor_like.hpp  tensor_reorder_iterator.hpp  tensorviewiterator.hpp  write_file_tensor.hpp
xtsrcmaps/tests/: CMakeLists.txt  fermi_tests.hxx  main.cpp  pixel_offsets.cxx  test_exposure.cxx  test_fitsfuncs.cxx  test_healpix.cxx  test_irf.cxx  test_king.cxx  test_model_map.cxx  test_model_map_v2.cxx  test_psf.cxx  test_psf_bilerp.cxx  test_sky_geom.cxx  test_src_utils.cxx
xtsrcmaps/tests/fits/: aeff_expected.hxx  exposure_cosbins_expected.hxx  psf_expected.hxx  src_dirs_expected.hxx
xtsrcmaps/tests/model_map/: test_pixel_offsets.cxx  test_riemann_slow.cxx
xtsrcmaps/utils/: CMakeLists.txt  bilerp.cxx  bilerp.hxx
